--- a/src/app/hero-details/hero-details.component.html
+++ b/src/app/hero-details/hero-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="hero">
+<div *ngIf="hero else #spinner">
   <h2>{{hero.name | uppercase}} Details</h2>
   <div><span>id: </span>{{hero.id}}</div>
   <div>
@@ -7,5 +7,6 @@
     </label>
   </div>
   <button (click)="goBack()">go back</button>
+  <button (click)="save()">Save</button>
 </div>
-
+<app-spinnerwheel #spinner></app-spinnerwheel>
