A spinning wheel is now shown before the details are loaded

--- a/src/app/hero-details/hero-details.component.html
+++ b/src/app/hero-details/hero-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="hero else #spinner">
+<div *ngIf="hero; else spinner">
   <h2>{{hero.name | uppercase}} Details</h2>
   <div><span>id: </span>{{hero.id}}</div>
   <div>
