--- a/src/app/hero-details/hero-details.component.html
+++ b/src/app/hero-details/hero-details.component.html
@@ -9,4 +9,6 @@
   <button (click)="goBack()">go back</button>
   <button (click)="save()">Save</button>
 </div>
-<app-spinnerwheel #spinner></app-spinnerwheel>
+<ng-template #spinner>
+    <app-spinnerwheel></app-spinnerwheel>
+</ng-template>
