CSS styling added for hero details

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,10 @@
 /* AppComponent's private CSS styles */
 h1 {
-  font-size: 1.2em;
+  font-size: 2em;
   color: #999;
   margin-bottom: 0;
 }
+
 h2 {
   font-size: 2em;
   margin-top: 0;
@@ -12,7 +13,7 @@ h2 {
 nav a {
   padding: 5px 10px;
   text-decoration: none;
-  margin-top: 10px;
+  margin: 2.5px 10px;
   display: inline-block;
   background-color: #eee;
   border-radius: 4px;
