--- a/src/app/spinnerwheel/spinnerwheel.component.css
+++ b/src/app/spinnerwheel/spinnerwheel.component.css
@@ -1,11 +1,10 @@
 /*  */
 .spinner_wheel {
     position: absolute;
-    top: 0px;
-    left: 0px;
+    margin: auto;    
     height: 100%;
     width: 100%;
     background-image: url("https://i.gifer.com/VdOY.gif");
     background-repeat: no-repeat;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 1);
 }
