--- a/src/app/hero-details/hero-details.component.css
+++ b/src/app/hero-details/hero-details.component.css
@@ -1,4 +1,7 @@
 .hDetails {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgb(204, 204, 204);
     border-radius: 20px;
 }
