--- a/src/app/hero-details/hero-details.component.html
+++ b/src/app/hero-details/hero-details.component.html
@@ -1,14 +1,15 @@
 <div *ngIf="hero; else spinner" class="hDetails">
-  <h2 align="center">{{hero.name | uppercase}} Details</h2>
-  <div class="heroAttribute"><span>Hero ID: </span>{{hero.id}}</div>
-  <div class="heroAttribute">
+    <h2>{{hero.name | uppercase}} Details</h2>
+    <div class="heroAttribute"><span>Hero ID: </span>{{hero.id}}</div>
+    <div class="heroAttribute">
     <label>Hero Name:
-      <input [(ngModel)]="hero.name" placeholder="name">
+        <input [(ngModel)]="hero.name" placeholder="name">
     </label>
-  </div>
-  <button (click)="save()">Save</button>
-  <button (click)="goBack()">go back</button>
+    </div>
+    <button (click)="save()">Save</button>
+    <button (click)="goBack()">go back</button>
 </div>
+
 <ng-template #spinner>
     <app-spinnerwheel></app-spinnerwheel>
 </ng-template>
