--- a/src/app/spinnerwheel/spinnerwheel.component.css
+++ b/src/app/spinnerwheel/spinnerwheel.component.css
@@ -1,10 +1,20 @@
 /*  */
-.spinner_wheel {
+.spinner_wheel{
+    display: flex;
+    flex-direction: column;
     position: absolute;
+    top: 0px;
+    left: 0px;
     margin: auto;    
     height: 100%;
     width: 100%;
-    background-image: url("https://i.gifer.com/VdOY.gif");
+    background-color: rgba(0,0,0,0.25);
     background-repeat: no-repeat;
-    background-color: rgba(255, 255, 255, 1);
+    align-items: center;
+    justify-content: center;
+}
+
+.spinner_wheel img{
+    width: 100px;
+    height: 100px;
 }
