--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,14 @@
 /* AppComponent's private CSS styles */
+.main_menu_options {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 h1 {
-  font-size: 2em;
-  color: #999;
-  margin-bottom: 0;
+    font-size: 2em;
+    color: #999;
+    margin-bottom: 0;
 }
 
 h2 {
