--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -1,11 +1,8 @@
 <div id="search-component">
-  <h4>Hero Search</h4>
-  <input #searchBox id="search-box" (keyup)="search(searchBox.value)" /> <!-- Calls search at each new keystroke -->
-  <ul class="search-result">
-    <li *ngFor="let hero of heroes$ | async" > <!-- The $ is convention for observable objects -->
-      <a routerLink="/detail/{{hero.id}}">
-        {{hero.name}}
-      </a>
-    </li>
-  </ul>
-</div>
+    <mat-form-field>
+        <input matInput placeholder="Hero search" #searchBox id="search-box" (keyup)="search(searchBox.value)" /> <!-- Calls search at each new keystroke -->
+        <mat-nav-list>
+            <a mat-list-item routerLink="/detail/{{hero.id}}" *ngFor="let hero of heroes$ | async" >{{hero.name}}</a>
+        </mat-nav-list>
+    </mat-form-field>
+    </div>
