--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,11 @@
-<h3>Top Heroes</h3>
-<div class="grid grid-pad">
-  <a *ngFor="let hero of heroes" class="col-1-4"
-      routerLink="/detail/{{hero.id}}">
-    <div class="module hero">
-      <h4>{{hero.name}}</h4>
+<h3>{{menuName}}</h3>
+<mat-grid-list cols="2" rowHeight="120px">
+    <div class="listCell mat-elevation-z8">
+        <mat-grid-tile *ngFor="let hero of heroes">
+            <a routerLink="/detail/{{hero.id}}">
+                <h4>{{hero.name}}</h4>
+            </a>
+        </mat-grid-tile>
     </div>
-  </a>
-</div>
+</mat-grid-list>
 <app-hero-search></app-hero-search>
