Hero list via Angular material list

--- a/src/app/hero-details/hero-details.component.html
+++ b/src/app/hero-details/hero-details.component.html
@@ -1,6 +1,7 @@
 <div class="hDetails">
     <div *ngIf="hero; else spinner">
         <h2>{{hero.name | uppercase}} Details</h2>
+        <!-- FIX -->
         <div class="heroAttribute"><span>Hero ID: </span>{{hero.id}}</div>
         <div class="heroAttribute">
         <label>Hero Name:
