--- a/src/app/hero-details/hero-details.component.html
+++ b/src/app/hero-details/hero-details.component.html
@@ -1,16 +1,15 @@
 <div class="hDetails">
     <div *ngIf="hero; else spinner">
         <h2>{{hero.name | uppercase}} Details</h2>
-        <!-- FIX -->
-        <div class="heroAttribute"><span>Hero ID: </span>{{hero.id}}</div>
-        <div class="heroAttribute">
-        <label>Hero Name:
-            <input [(ngModel)]="hero.name" placeholder="name">
-        </label>
-        </div>
+        <mat-card>
+            <mat-card-header>Hero ID:</mat-card-header>
+            <mat-card-content>{{hero.id}}</mat-card-content>
+        </mat-card>
+        <mat-form-field style="width: 100%">
+            <input matInput [(ngModel)]="hero.name"/>
+        </mat-form-field>
         <button (click)="save()">Save</button>
         <button (click)="goBack()">go back</button>
-    </div>
     <ng-template #spinner>
         <app-spinnerwheel [fullPath]="gifPath"></app-spinnerwheel>
     </ng-template>
