--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -19,7 +19,7 @@
             <ng-container matColumnDef="edit" stickyEnd>
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let hero">
-                    <button mat-raised-button>Edit</button>     
+                    <button mat-raised-button (click)="editHero(hero)">Edit</button>     
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="renderedColumns; sticky: true"></tr>
