--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,25 +12,36 @@ h1 {
 }
 
 h2 {
-  font-size: 2em;
-  margin-top: 0;
-  padding-top: 0;
+    font-size: 2em;
+    margin: 0px 10px 0px 4px;
+    padding-top: 0;
+    color: white;
 }
+
 nav a {
-  padding: 5px 10px;
-  text-decoration: none;
-  margin: 2.5px 10px;
-  display: inline-block;
-  background-color: #eee;
-  border-radius: 4px;
+    padding: 5px 10px;
+    text-decoration: none;
+    margin: 2.5px 10px;
+    display: inline-block;
+    background-color: #eee;
+    border-radius: 4px;
 }
 nav a:visited, a:link {
-  color: #607d8b;
+    color: #607d8b;
 }
 nav a:hover {
-  color: #039be5;
-  background-color: #cfd8dc;
+    color: #039be5;
+    background-color: #cfd8dc;
 }
 nav a.active {
-  color: #039be5;
+    color: #039be5;
+}
+
+a {
+    text-decoration: none;
+}
+
+button {
+    
+
 }
