--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,6 +1,32 @@
-<div *ngIf="messageService.messages.length">
-    <h2>Messages</h2>
-    <div *ngFor='let message of messageService.messages'> {{message}} </div>
-    <button class="clear"
-          (click)="messageService.clear()">clear</button>
-</div>
+<h2>Messages</h2>
+<table mat-table [dataSource]="msgLog" class="mat-elevation-z8">
+    <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox (change)="$event ? toggleAll() : null"
+                          [checked]="curSelection.hasValue() && allSelected()"
+                          [indeterminate]="curSelection.hasValue() && !allSelected()">
+            </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+            <mat-checkbox (click)="$event.stopPropagation()"
+                          (change)="$event ? curSelection.toggle(row) : null"
+                          [checked]="curSelection.isSelected(row)">
+            </mat-checkbox>
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <td mat-cell *matHeaderCell="let msg">{{msg.id}}</td>
+    </ng-container>
+    <ng-container matColumnDef="content">
+        <th mat-header-cell *matHeaderCellDef>Content</th>
+        <td mat-cell *matHeaderCell="let msg">{{msg.content}}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="renderedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: renderedColumns;" 
+                (click)="curSelection.toggle(row)">
+    </tr>
+</table>
+<button mat-button class="clear" (click)="messageService.clearAll()">Clear all</button>
+<button mat-button class="clear" (click)="messageService.clearSelected(curSelection.selected)">Clear selected</button>
