--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -13,6 +13,13 @@ h4 {
 }
 
 mat-grid-tile {
-    background: #2A3439;
+    background: grey;
     border-radius: 4px;
+}
+
+.dashboard {
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
