--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,13 @@
-<h3>{{menuName}}</h3>
-<mat-grid-list cols="2" rowHeight="120px">
-    <div class="listCell mat-elevation-z8">
-        <mat-grid-tile *ngFor="let hero of heroes">
-            <button mat-button (click)="editHero(hero)">
-                <h4>{{hero.name}}</h4>
-            </button>
-        </mat-grid-tile>
-    </div>
-</mat-grid-list>
-<app-hero-search></app-hero-search>
+<div class="dashboard">
+    <h3>{{menuName}}</h3>
+    <mat-grid-list cols="2" rowHeight="120px">
+        <div class="listCell mat-elevation-z8">
+            <mat-grid-tile *ngFor="let hero of heroes">
+                <button mat-button (click)="editHero(hero)">
+                    <h4>{{hero.name}}</h4>
+                </button>
+            </mat-grid-tile>
+        </div>
+    </mat-grid-list>
+    <app-hero-search></app-hero-search>
+</div>
